--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -17,45 +17,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-<!--    <ru.biozzlab.mylauncher.ui.layouts.DragLayer-->
-<!--        android:id="@+id/dragLayer"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:fitsSystemWindows="true"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintBottom_toTopOf="@id/hotSeat"-->
-<!--        app:layout_constraintHorizontal_weight="1">-->
+    <ru.biozzlab.mylauncher.ui.layouts.DragLayer
+        android:id="@+id/dragLayer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/hotSeat"
+        app:layout_constraintHorizontal_weight="1">
 
-<!--        <ru.biozzlab.mylauncher.ui.views.Workspace-->
-<!--            android:id="@+id/workspaceView"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent">-->
+        <ru.biozzlab.mylauncher.ui.views.Workspace
+            android:id="@+id/workspaceView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-<!--            <include-->
-<!--                android:id="@+id/cell1"-->
-<!--                layout="@layout/item_cell" />-->
+            <include
+                android:id="@+id/cell1"
+                layout="@layout/item_cell" />
 
-<!--            <include-->
-<!--                android:id="@+id/cell2"-->
-<!--                layout="@layout/item_cell" />-->
+            <include
+                android:id="@+id/cell2"
+                layout="@layout/item_cell" />
 
-<!--            <include-->
-<!--                android:id="@+id/cell3"-->
-<!--                layout="@layout/item_cell" />-->
+            <include
+                android:id="@+id/cell3"
+                layout="@layout/item_cell" />
 
-<!--            <include-->
-<!--                android:id="@+id/cell4"-->
-<!--                layout="@layout/item_cell" />-->
+            <include
+                android:id="@+id/cell4"
+                layout="@layout/item_cell" />
 
-<!--            <include-->
-<!--                android:id="@+id/cell5"-->
-<!--                layout="@layout/item_cell" />-->
+            <include
+                android:id="@+id/cell5"
+                layout="@layout/item_cell" />
 
-<!--        </ru.biozzlab.mylauncher.ui.views.Workspace>-->
+        </ru.biozzlab.mylauncher.ui.views.Workspace>
 
-<!--    </ru.biozzlab.mylauncher.ui.layouts.DragLayer>-->
+    </ru.biozzlab.mylauncher.ui.layouts.DragLayer>
 
     <include
         android:id="@+id/hotSeat"
