--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="app_icon_size">48dp</dimen>
+    <dimen name="workspace_cell_width_land">106dp</dimen>
 </resources>
