--- a/app/src/main/res/layout/item_cell.xml
+++ b/app/src/main/res/layout/item_cell.xml
@@ -3,12 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:hapticFeedbackEnabled="false">
+    android:hapticFeedbackEnabled="false"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/textCell"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cell 1"/>
+        android:text="Cell 1"
+        android:background="@color/colorPrimaryDark"/>
 
 </ru.biozzlab.mylauncher.ui.layouts.CellLayout>
