Shortcuts into cells

--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -39,7 +39,7 @@
 
             <include
                 android:id="@+id/cell1"
-                layout="@layout/item_cell" />
+                layout="@layout/item_cell"/>
 
             <include
                 android:id="@+id/cell2"
@@ -67,6 +67,14 @@
             app:layout_constraintStart_toStartOf="parent"
             android:src="@drawable/scroll_indicator"
             android:scaleType="fitXY"/>
+
+<!--        <TextView-->
+<!--            android:id="@+id/hotSeat"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"/>-->
 
         <include
             android:id="@+id/hotSeat"
