--- a/app/src/main/res/layout/item_cell.xml
+++ b/app/src/main/res/layout/item_cell.xml
@@ -4,10 +4,11 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:hapticFeedbackEnabled="false"
-    android:background="@color/colorPrimaryDark"
-    android:paddingTop="6dp"
-    app:cellWidth="90dp"
-    app:cellHeight="90dp"
+    android:paddingTop="15dp"
+    android:paddingStart="20dp"
+    android:paddingEnd="20dp"
+    app:cellWidth="80dp"
+    app:cellHeight="100dp"
     app:widthGap="0dp"
     app:heightGap="0dp"
     app:maxGap="16dp">
