--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="workspace_icon_text_color">#FFFFFF</color>
+    <color name="hot_seat_text_color">#00FFFFFF</color>
 </resources>
