--- a/app/src/main/res/layout/item_application.xml
+++ b/app/src/main/res/layout/item_application.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
-    android:focusable="true">
+    android:focusable="true"
+    android:textAlignment="center">
 
 </androidx.appcompat.widget.AppCompatTextView>
