--- a/app/src/main/res/xml/default_workspace.xml
+++ b/app/src/main/res/xml/default_workspace.xml
@@ -89,4 +89,22 @@
         launcher:container="1"
         launcher:x="0"
         launcher:y="1" />
+
+    <favorite
+        launcher:id="12"
+        launcher:packageName="com.android.contacts"
+        launcher:className="com.android.contacts.activities.PeopleActivity"
+        launcher:container="1"
+        launcher:x="3"
+        launcher:y="2"
+        launcher:desktopNumber="2" />
+
+    <favorite
+        launcher:id="13"
+        launcher:packageName="com.android.browser"
+        launcher:className="com.android.browser.BrowserActivity"
+        launcher:container="1"
+        launcher:x="2"
+        launcher:y="3"
+        launcher:desktopNumber="2"/>
 </favorites>
