Add widgets item into room data base

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -27,6 +27,8 @@
         <attr name="container" format="integer" />
         <attr name="x" format="integer" />
         <attr name="y" format="integer" />
+        <attr name="spanX" format="integer" />
+        <attr name="spanY" format="integer" />
         <attr name="desktopNumber" format="integer" />
     </declare-styleable>
 
