--- a/app/src/main/res/xml/default_workspace.xml
+++ b/app/src/main/res/xml/default_workspace.xml
@@ -29,6 +29,7 @@
         launcher:packageName="com.android.deskclock"
         launcher:className="com.android.alarmclock.AnalogAppWidgetProvider"
         launcher:container="1"
+        launcher:desktopNumber="2"
         launcher:x="0"
         launcher:y="0"
         launcher:spanX="2"
