--- a/app/src/main/res/layout-land/activity_launcher.xml
+++ b/app/src/main/res/layout-land/activity_launcher.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.Launcher"
-    android:id="@+id/clLayout">
+    android:id="@+id/clLayout"
+    android:background="@color/main_background_color">
 
     <ru.biozzlab.mylauncher.ui.layouts.DragLayer
         android:id="@+id/dragLayer"
