--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -5,6 +5,10 @@
     <integer name="hot_seat_column_count">1</integer>
     <integer name="hot_seat_row_count">5</integer>
 
+    <dimen name="app_icon_size">60dp</dimen>
+    <dimen name="app_icon_padding">20dp</dimen>
+    <dimen name="app_icon_border_radius">10dp</dimen>
+
     <dimen name="cell_layout_padding_top">60dp</dimen>
     <dimen name="cell_layout_padding_start">50dp</dimen>
     <dimen name="cell_layout_padding_end">50dp</dimen>
