--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="app_icon_size">48dp</dimen>
+    <dimen name="app_icon_padding">5dp</dimen>
+    <dimen name="app_icon_border_radius">5dp</dimen>
+
     <dimen name="workspace_cell_width_land">106dp</dimen>
 
     <dimen name="cell_layout_padding_top">15dp</dimen>
