--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -2,8 +2,6 @@
 <resources>
     <integer name="cell_layout_column_count">5</integer>
     <integer name="cell_layout_row_count">3</integer>
-    <integer name="hot_seat_column_count">1</integer>
-    <integer name="hot_seat_row_count">5</integer>
 
     <dimen name="app_icon_size">60dp</dimen>
     <dimen name="app_icon_padding">20dp</dimen>
@@ -17,4 +15,18 @@
     <dimen name="cell_layout_width_gap">50dp</dimen>
     <dimen name="cell_layout_height_gap">30dp</dimen>
     <dimen name="cell_layout_max_gap">16dp</dimen>
+
+    <integer name="hot_seat_column_count">1</integer>
+    <integer name="hot_seat_row_count">4</integer>
+
+    <dimen name="hot_seat_padding_top">10dp</dimen>
+    <dimen name="hot_seat_padding_bottom">0dp</dimen>
+    <dimen name="hot_seat_padding_start">0dp</dimen>
+    <dimen name="hot_seat_padding_end">0dp</dimen>
+    <dimen name="hot_seat_cell_width">80dp</dimen>
+    <dimen name="hot_seat_cell_height">80dp</dimen>
+    <dimen name="hot_seat_width_gap">0dp</dimen>
+    <dimen name="hot_seat_height_gap">40dp</dimen>
+    <dimen name="hot_seat_max_gap">16dp</dimen>
+    <bool name="hot_seat_menu_button_visible">false</bool>
 </resources>
