--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <color name="main_background_color">#000102</color>
+    <color name="main_background_color">#2B2B2B</color>
     <color name="workspace_icon_text_color">#FFFFFF</color>
     <color name="hot_seat_text_color">#00FFFFFF</color>
     <color name="app_icon_background_color">#400085FF</color>
