--- a/app/src/main/res/layout-land/activity_launcher.xml
+++ b/app/src/main/res/layout-land/activity_launcher.xml
@@ -28,7 +28,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/hotSeat"
             app:layout_constraintBottom_toTopOf="@id/ivPageIndicator"
-            app:layout_constraintHorizontal_weight="10">
+            app:layout_constraintHorizontal_weight="10"
+            app:defaultPage="@integer/workspace_default_page">
 
             <include
                 android:id="@+id/cell1"
