--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -23,6 +23,10 @@
         <attr name="cellCountY" format="integer"/>
     </declare-styleable>
 
+    <declare-styleable name="PagedView">
+        <attr name="defaultPage" format="integer"/>
+    </declare-styleable>
+
     <declare-styleable name="Favorite">
         <attr name="id" format="integer" />
         <attr name="className" format="string" />
