--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,7 @@
 
     <integer name="hot_seat_column_count">5</integer>
     <integer name="hot_seat_row_count">1</integer>
+    <integer name="hot_seat_menu_button_position">2</integer>
 
     <dimen name="hot_seat_padding_top">8dp</dimen>
     <dimen name="hot_seat_padding_bottom">0dp</dimen>
