--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="workspace_icon_text_color">#FFFFFF</color>
     <color name="hot_seat_text_color">#00FFFFFF</color>
     <color name="app_icon_background_color">#400085FF</color>
+    <color name="app_icon_background_stroke_color">#400085FF</color>
 </resources>
