--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="app_icon_size">48dp</dimen>
     <dimen name="app_icon_padding">5dp</dimen>
     <dimen name="app_icon_border_radius">5dp</dimen>
+    <dimen name="app_icon_border_stroke">5dp</dimen>
 
     <dimen name="workspace_cell_width_land">106dp</dimen>
     <integer name="workspace_default_page">2</integer>
