--- a/app/src/main/res/layout-land-mdpi/activity_launcher.xml
+++ b/app/src/main/res/layout-land-mdpi/activity_launcher.xml
@@ -58,8 +58,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/hotSeat"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
             android:src="@drawable/scroll_indicator"
             android:scaleType="fitXY"/>
 
