--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -1,94 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Launcher"
-    android:id="@+id/clLayout">
+    tools:context=".ui.Launcher">
 
-    <ru.biozzlab.mylauncher.ui.layouts.DragLayer
-        android:id="@+id/dragLayer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
+    <fragment
+        android:id="@+id/navHostFragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_weight="1">
-
-        <ru.biozzlab.mylauncher.ui.layouts.Workspace
-            android:id="@+id/workspaceView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/ivPageIndicator">
-
-            <include
-                android:id="@+id/cell1"
-                layout="@layout/item_cell"/>
-
-            <include
-                android:id="@+id/cell2"
-                layout="@layout/item_cell" />
-
-            <include
-                android:id="@+id/cell3"
-                layout="@layout/item_cell" />
-
-            <include
-                android:id="@+id/cell4"
-                layout="@layout/item_cell" />
-
-            <include
-                android:id="@+id/cell5"
-                layout="@layout/item_cell" />
-
-        </ru.biozzlab.mylauncher.ui.layouts.Workspace>
-
-        <ProgressBar
-            android:id="@+id/pbWorkspaceInit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/workspaceView"
-            app:layout_constraintBottom_toBottomOf="@id/workspaceView"
-            app:layout_constraintStart_toStartOf="@id/workspaceView"
-            app:layout_constraintEnd_toEndOf="@id/workspaceView"
-            android:visibility="gone"/>
-
-        <ImageView
-            android:id="@+id/ivPageIndicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/hotSeat"
-            app:layout_constraintStart_toStartOf="parent"
-            android:src="@drawable/scroll_indicator"
-            android:scaleType="fitXY"/>
-
-        <include
-            android:id="@+id/hotSeat"
-            layout="@layout/item_hotseat"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_gravity="end"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <include
-            layout="@layout/item_delete_region"
-            android:id="@+id/deleteRegion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:visibility="gone"/>
-
-    </ru.biozzlab.mylauncher.ui.layouts.DragLayer>
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/main_graph"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
