--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,6 +24,11 @@
     <integer name="hot_seat_row_count">1</integer>
     <integer name="hot_seat_menu_button_position">2</integer>
 
+    <dimen name="hot_seat_app_icon_size">48dp</dimen>
+    <dimen name="hot_seat_app_icon_padding">5dp</dimen>
+    <dimen name="hot_seat_app_icon_border_radius">5dp</dimen>
+    <dimen name="hot_seat_app_icon_border_stroke">5dp</dimen>
+
     <dimen name="hot_seat_padding_top">8dp</dimen>
     <dimen name="hot_seat_padding_bottom">0dp</dimen>
     <dimen name="hot_seat_padding_start">0dp</dimen>
