--- a/app/src/main/res/layout/item_application.xml
+++ b/app/src/main/res/layout/item_application.xml
@@ -4,6 +4,8 @@
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:focusable="true"
-    android:textAlignment="center">
+    android:textAlignment="center"
+    android:textSize="@dimen/app_icon_text_size"
+    android:drawablePadding="@dimen/app_icon_text_padding">
 
 </androidx.appcompat.widget.AppCompatTextView>
