--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
-    <color name="main_background_color">#71A8E0</color>
+    <color name="black">#000000</color>
+    <color name="main_background_color">#1D202A</color>
     <color name="workspace_icon_text_color">#FFFFFF</color>
     <color name="hot_seat_text_color">#00FFFFFF</color>
     <color name="app_icon_background_color">#400085FF</color>
