--- a/app/src/main/res/values-w1280dp-land-mdpi/dimens.xml
+++ b/app/src/main/res/values-w1280dp-land-mdpi/dimens.xml
@@ -2,6 +2,8 @@
 <resources>
     <dimen name="app_icon_size">120dp</dimen>
     <dimen name="app_icon_padding">50dp</dimen>
+    <dimen name="app_icon_border_radius">6dp</dimen>
+    <dimen name="app_icon_border_stroke">2dp</dimen>
 
     <dimen name="hot_seat_app_icon_size">90dp</dimen>
     <dimen name="hot_seat_app_icon_padding">20dp</dimen>
